<?xml version="1.0"?>
<package format="2">
  <name>servoarm_description</name>
  <version>0.0.0</version>
  <description>The servoarm_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lanealucy@gmail.com">Lanea Lucy S.</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/servoarm_description</url> -->
  <url type="website">https://github.com/LaneaLucy/servoarm_description</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="krmcelhinney@gmail.com">Ken McElhinney</author>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
